[package]
name = "readability"
edition = "2024"
version = "0.4.0"
authors = ["Hiroki Kumamoto <kumabook@live.jp>","Max Irwin <max@max.io>"]
license = "MIT"
homepage = "https://github.com/binarymax/readability"
repository = "https://github.com/binarymax/readability.git"
description = "Port of arc90's readability project to rust"
keywords = ["readability"]
categories = []

[dependencies]
regex = "1.9"
url = "2.4"
html5ever = "0.26"
markup5ever_rcdom = "0.2"
lazy_static = "1.4"